# ambientify-sound-engine

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  react-native-jsi-template.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: EngineChannel.cpp  EngineChannel.h  SoundEngine.cpp  SoundEngine.h  SoundEngineHostObject.cpp  SoundEngineHostObject.h  bindings.cpp  bindings.h  common.cpp  common.h  cpp-adapter.cpp
android/src/main/cpp/utils/: Promise.cpp  Promise.h  ThreadPool.h
android/src/main/java/com/ambientifysoundengine/: ASoundEngineModule.java  ASoundEnginePackage.java  CountdownTimer.kt  EngineBridge.kt  EngineModule.kt  EnginePackage.kt  EngineService.kt  RemoteControlReceiver.kt  StateSingleton.kt  Utils.kt
android/src/main/res/drawable/: ic_stop.xml
example/: App.js  package-lock.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/example/: MainApplication.java
example/ios/: Podfile
src/: index.ts  indexbak
